--- a/.azuredevops/scripts/kubernetes/windows/hello-world.yaml
+++ b/.azuredevops/scripts/kubernetes/windows/hello-world.yaml
@@ -1,3 +1,8 @@
+parameters:
+  - name: helloWaitSeconds
+    type: int
+    default: 180
+
 steps:
   - task: CmdLine@2
     displayName: "Run Hello World"
@@ -11,8 +16,9 @@ steps:
         echo "Hostname:"
         hostname
   # powershell task to wait 300 seconds
+  # powershell task to wait configurable seconds (default 180)
   - task: PowerShell@2
-    displayName: "Wait 300 seconds"
+    displayName: "Wait $(helloWaitSeconds) seconds (hello-world)"
     inputs:
       targetType: "inline"
-      script: "Start-Sleep -Seconds 300"
+      script: "Start-Sleep -Seconds $([int]('$(helloWaitSeconds)'))"
