--- a/.azuredevops/scripts/kubernetes/linux/hello-world.yaml
+++ b/.azuredevops/scripts/kubernetes/linux/hello-world.yaml
@@ -1,15 +1,15 @@
 parameters:
   - name: helloWaitSeconds
-    type: int
+    type: number
     default: 120
 
 steps:
   - bash: |
       echo "Hello, Welcome to DevOps ABCs World!"
       # sleep for a configurable time
-      echo "Sleeping for $(helloWaitSeconds) seconds..."
-      sleep $(helloWaitSeconds)
-    displayName: "Hello World (sleep=$(helloWaitSeconds)s)"
+      echo "Sleeping for ${{ parameters.helloWaitSeconds }} seconds..."
+      sleep ${{ parameters.helloWaitSeconds }}
+    displayName: "Hello World (sleep=${{ parameters.helloWaitSeconds }}s)"
   - task: CmdLine@2
     displayName: test docker
     inputs:
